--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,8 @@ body {
     display:grid;
     font-family: "Roboto Mono", monospace;
     background-color: #D8D4CD;
-    grid-template-columns: 1fr fr;
-    grid-template-rows: 1fr 6fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 8fr;
 }
 
 header{
@@ -89,3 +89,36 @@ h1{
     border-radius: 10px;
 }
 
+.right{
+    display: flex;
+}
+img{
+    width: 58rem;
+    height: 45.95rem;
+    object-fit: cover;
+}
+
+.menu{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 3fr;
+    gap: 0px;
+    padding: 5rem 0rem 0rem 2rem;
+}
+.menu-item{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+.price{
+    font-size: 1.5rem;
+}
+
+.ingredients h2{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+.ingredients p{
+    font-size:1rem;
+    font-style: italic;
+}
